--- a/index.html
+++ b/index.html
@@ -7,30 +7,32 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="calculator">
-    <div class="display">
-      <input type="text" id="display" disabled>
-    </div>
-    <div class="buttons">
-      <button class="btn" onclick="appendNumber(7)">7</button>
-      <button class="btn" onclick="appendNumber(8)">8</button>
-      <button class="btn" onclick="appendNumber(9)">9</button>
-      <button class="btn operator" onclick="appendOperator('+')">+</button>
+  <div class="calculator-card">
+    <div class="calculator">
+      <div class="display">
+        <input type="text" id="display" disabled>
+      </div>
+      <div class="buttons">
+        <button class="btn" onclick="appendNumber(7)">7</button>
+        <button class="btn" onclick="appendNumber(8)">8</button>
+        <button class="btn" onclick="appendNumber(9)">9</button>
+        <button class="btn operator" onclick="appendOperator('+')">+</button>
 
-      <button class="btn" onclick="appendNumber(4)">4</button>
-      <button class="btn" onclick="appendNumber(5)">5</button>
-      <button class="btn" onclick="appendNumber(6)">6</button>
-      <button class="btn operator" onclick="appendOperator('-')">-</button>
+        <button class="btn" onclick="appendNumber(4)">4</button>
+        <button class="btn" onclick="appendNumber(5)">5</button>
+        <button class="btn" onclick="appendNumber(6)">6</button>
+        <button class="btn operator" onclick="appendOperator('-')">-</button>
 
-      <button class="btn" onclick="appendNumber(1)">1</button>
-      <button class="btn" onclick="appendNumber(2)">2</button>
-      <button class="btn" onclick="appendNumber(3)">3</button>
-      <button class="btn operator" onclick="appendOperator('*')">*</button>
+        <button class="btn" onclick="appendNumber(1)">1</button>
+        <button class="btn" onclick="appendNumber(2)">2</button>
+        <button class="btn" onclick="appendNumber(3)">3</button>
+        <button class="btn operator" onclick="appendOperator('*')">*</button>
 
-      <button class="btn" onclick="appendNumber(0)">0</button>
-      <button class="btn" onclick="clearDisplay()">C</button>
-      <button class="btn" onclick="calculate()">=</button>
-      <button class="btn operator" onclick="appendOperator('/')">/</button>
+        <button class="btn" onclick="appendNumber(0)">0</button>
+        <button class="btn" onclick="clearDisplay()">C</button>
+        <button class="btn" onclick="calculate()">=</button>
+        <button class="btn operator" onclick="appendOperator('/')">/</button>
+      </div>
     </div>
   </div>
 
